--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,20 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <!--fonts-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+    <!--iconic-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
+    <!--my CSS-->
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -28,11 +23,87 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- 9:00am Timeblock -->
+      <div id="9" class="row time-block">
+        <div class="col-2 col-md-1 hour">9:00am</div>
+      <textarea id="task9" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+     <!-- 10:00am Timeblock -->
+      <div id="10" class="row time-block">
+        <div class="col-2 col-md-1 hour">10:00am
+        </div>
+      <textarea id="task10" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 11:00am Timeblock -->
+      <div id="11" class="row time-block">
+        <div class="col-2 col-md-1 hour">11:00am
+        </div>
+      <textarea id="task11" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 12:00pm Timeblock -->
+      <div id="12" class="row time-block">
+        <div class="col-2 col-md-1 hour">12:00pm
+        </div>
+      <textarea id="task12" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 1:00pm Timeblock -->
+      <div id="1" class="row time-block">
+        <div class="col-2 col-md-1 hour">1:00pm
+        </div>
+      <textarea id="task1" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 2:00pm Timeblock -->
+      <div id="2" class="row time-block">
+        <div class="col-2 col-md-1 hour">2:00pm
+        </div>
+      <textarea id="task2" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 3:00pm Timeblock -->
+      <div id="3" class="row time-block">
+        <div class="col-2 col-md-1 hour">3:00pm
+        </div>
+      <textarea id="task3" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 4:00pm Timeblock -->
+      <div id="4" class="row time-block">
+        <div class="col-2 col-md-1 hour">4:00pm
+        </div>
+      <textarea id="task4" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
+      <!-- 5:00pm Timeblock -->
+      <div id="5" class="row time-block">
+        <div class="col-2 col-md-1 hour">5:00pm
+        </div>
+      <textarea id="task5" class="description col-8 col-md-10">Task</textarea>
+      <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
+      </div>
+
     </div>
 
+
+    <!--jQuery-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--Momemnt.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!--my JS-->
+    <script src="./script.js"></script>
   </body>
 </html>
