--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,72 +28,72 @@
     <div class="container">
       <!-- 9:00am Timeblock -->
       <div id="9" class="row time-block">
-        <div class="col-2 col-md-1 hour">9:00am</div>
-      <textarea id="task9" class="description col-8 col-md-10">Task</textarea>
+        <div class="col-2 col-md-1 hour">9am</div>
+      <textarea id="task9" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
      <!-- 10:00am Timeblock -->
       <div id="10" class="row time-block">
-        <div class="col-2 col-md-1 hour">10:00am
+        <div class="col-2 col-md-1 hour">10am
         </div>
-      <textarea id="task10" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task10" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 11:00am Timeblock -->
       <div id="11" class="row time-block">
-        <div class="col-2 col-md-1 hour">11:00am
+        <div class="col-2 col-md-1 hour">11am
         </div>
-      <textarea id="task11" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task11" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 12:00pm Timeblock -->
       <div id="12" class="row time-block">
-        <div class="col-2 col-md-1 hour">12:00pm
+        <div class="col-2 col-md-1 hour">12pm
         </div>
-      <textarea id="task12" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task12" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 1:00pm Timeblock -->
-      <div id="1" class="row time-block">
-        <div class="col-2 col-md-1 hour">1:00pm
+      <div id="13" class="row time-block">
+        <div class="col-2 col-md-1 hour">1pm
         </div>
-      <textarea id="task1" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task1" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 2:00pm Timeblock -->
-      <div id="2" class="row time-block">
-        <div class="col-2 col-md-1 hour">2:00pm
+      <div id="14" class="row time-block">
+        <div class="col-2 col-md-1 hour">2pm
         </div>
-      <textarea id="task2" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task2" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 3:00pm Timeblock -->
-      <div id="3" class="row time-block">
-        <div class="col-2 col-md-1 hour">3:00pm
+      <div id="15" class="row time-block">
+        <div class="col-2 col-md-1 hour">3pm
         </div>
-      <textarea id="task3" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task3" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 4:00pm Timeblock -->
-      <div id="4" class="row time-block">
-        <div class="col-2 col-md-1 hour">4:00pm
+      <div id="16" class="row time-block">
+        <div class="col-2 col-md-1 hour">4pm
         </div>
-      <textarea id="task4" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task4" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
       <!-- 5:00pm Timeblock -->
-      <div id="5" class="row time-block">
-        <div class="col-2 col-md-1 hour">5:00pm
+      <div id="17" class="row time-block">
+        <div class="col-2 col-md-1 hour">5pm
         </div>
-      <textarea id="task5" class="description col-8 col-md-10">Task</textarea>
+      <textarea id="task5" class="description col-8 col-md-10"></textarea>
       <button class="col-2 col-md-1 btn saveBtn"><span class="oi oi-box"></span></button>
       </div>
 
