fixed linked assests

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--iconic-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
     <!--my CSS-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -105,6 +105,6 @@
     <!--Momemnt.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!--my JS-->
-    <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
